[Chore] Remove unnecessary abstract function