@@ -33,10 +33,6 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
-
-    minHeapSize = "512m"
-    maxHeapSize = "1024m"
-    jvmArgs = listOf("-XX:MaxPermSize=512m")
 }
 
 tasks.getByName<ShadowJar>("shadowJar") {
